--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,31 @@
-confirm.text=Are you sure?
+index.title=CT2
+#
+fragments.header.home=Home
+fragments.header.buses=Buses
+fragments.header.busstops=Busstops
+#
+# Bus
+bus.show.title=Bus
+bus.show.add=Add new bus
+bus.show.id=ID
+bus.show.description=Description
+bus.show.actions=Actions
+bus.show.details=Details
+bus.show.edit=Edit
+bus.show.delete=Delete
+#
+bus.details.title=Bus
+bus.details.id=ID
+bus.details.description=Description
+bus.details.edit=Edit
+bus.details.delete=Delete
+#
+bus.form.title=Bus
+bus.form.description=Description
+bus.form.save=Save
+bus.form.cancel=Cancel
+#
+bus.confirm.title=Bus
+bus.confirm.areYouSure=Are you sure?
+bus.confirm.delete=Delete
+bus.confirm.cancel=Cancel
