--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,1 +1,4 @@
-confirm.text=Jesteœ pewien?
+index.hello=Cze\u015B\u0107
+confirm.areYouSure=Jeste\u015B pewien?
+confirm.delete=Usu\u0144
+confirm.cancel=Anuluj
