--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,3 +29,29 @@ bus.confirm.title=Bus
 bus.confirm.areYouSure=Are you sure?
 bus.confirm.delete=Delete
 bus.confirm.cancel=Cancel
+#
+# Busstop
+busstop.show.title=Busstop
+busstop.show.add=Add new busstop
+busstop.show.id=ID
+busstop.show.name=Name
+busstop.show.actions=Actions
+busstop.show.details=Details
+busstop.show.edit=Edit
+busstop.show.delete=Delete
+#
+busstop.details.title=Busstop
+busstop.details.id=ID
+busstop.details.name=Name
+busstop.details.edit=Edit
+busstop.details.delete=Delete
+#
+busstop.form.title=Busstop
+busstop.form.name=Name
+busstop.form.save=Save
+busstop.form.cancel=Cancel
+#
+busstop.confirm.title=Busstop
+busstop.confirm.areYouSure=Are you sure?
+busstop.confirm.delete=Delete
+busstop.confirm.cancel=Cancel
