--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ index.title=CT2
 fragments.header.home=Home
 fragments.header.buses=Buses
 fragments.header.busstops=Busstops
+fragments.header.tracks=Rracks
 #
 # Bus
 bus.show.title=Bus
@@ -55,3 +56,32 @@ busstop.confirm.title=Busstop
 busstop.confirm.areYouSure=Are you sure?
 busstop.confirm.delete=Delete
 busstop.confirm.cancel=Cancel
+#
+# Track
+track.show.title=Track
+track.show.add=Add new track
+track.show.id=ID
+track.show.number=Number
+track.show.variant=Variant
+track.show.actions=Actions
+track.show.details=Details
+track.show.edit=Edit
+track.show.delete=Delete
+#
+track.details.title=Track
+track.details.id=ID
+track.details.number=Number
+track.details.variant=Variant
+track.details.edit=Edit
+track.details.delete=Delete
+#
+track.form.title=Track
+track.form.number=Number
+track.form.variant=Variant
+track.form.save=Save
+track.form.cancel=Cancel
+#
+track.confirm.title=Track
+track.confirm.areYouSure=Are you sure?
+track.confirm.delete=Delete
+track.confirm.cancel=Cancel
